# neat-api

./: .env  Cargo.toml  README.md  UR Rust Backend API.postman_collection.json  watch.sh
.github/workflows/: rust.yml
src/: main.rs
src/auth/: model.rs  router.rs
src/banks/: router.rs
src/common/: mod.rs  model.rs
src/common/errors/: model.rs
src/common/responses/: model.rs
src/common/stdout/: model.rs
src/currency/: model.rs  router.rs
src/data_store/: mod.rs  model.rs
src/data_store/currency/: model.rs
src/data_store/user/: model.rs
src/errors/: model.rs
src/health/: mod.rs  model.rs  router.rs
src/income_period/: model.rs  router.rs
src/jwt/: model.rs  router.rs
src/store/: model.rs  router.rs
src/user/: model.rs  router.rs
