[package]
# based on https://blog.logrocket.com/create-backend-api-with-rust-postgres/
name = "neat-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
jsonwebtoken = "8"
http = "0.2.9"
thiserror = "1.0"
colored = "2.0.0"
chrono = "0.4.24"
uuid = "0.8.2"
# sqlx = { version = "0.5.7", features = ["postgres", "macros"] }
# sqlx-core = { version = "0.5.7", features = ["postgres", "macros"] }
# sqlx-rt = { version = "0.5.7", features = ["rt-tokio", "macros"] }
# sqlx-migrate = { version = "0.1.0", features = ["cli"] }
# sqlx-cli = { version = "0.5.7", features = ["postgres"] }
# sqlx-derive = { version = "0.5.7", features = ["postgres"] }
# sqlx-rt-tokio = { version = "0.5.7", features = ["rt-tokio"] }
# sqlx-rt-tokio-02 = { version = "0.5.7", features = ["rt-tokio-02"] }
# sqlx-rt-tokio-1 = { version = "0.5.7", features = ["rt-tokio-1"] }
